--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
           <div>
             <button class="button-small">Buy 1 Token</button>
           </div>
+          <img src="./assets/menu-icon.svg" alt="menu-icon" class="menu-icon" />
         </nav>
       </section>
       <!-- Hero Section -->
